[package]
name = "egui_ltreeview"
version = "0.2.0"
edition = "2021"
authors = ["Leonard Schüngel <schuengel.leonard@gmail.com>"]
license = "MIT"
description = "A tree view widget for egui"
repository = "https://github.com/LennysLounge/egui_ltreeview"
categories = ["gui"]
keywords = ["egui", "gui", "widget", "tree"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

[dependencies]
egui = { version = "0.31" }

serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
eframe = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
persistence = ["serde", "egui/persistence"]
