[package]
name = "egui_ltreeview"
version = "0.5.1"
edition = "2021"
authors = ["Leonard Schüngel <schuengel.leonard@gmail.com>"]
license = "MIT"
description = "A tree view widget for egui"
repository = "https://github.com/LennysLounge/egui_ltreeview"
categories = ["gui"]
keywords = ["egui", "gui", "widget", "tree"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]

[package.metadata.docs.rs]
features = ["doc"]

[dependencies]
egui = { version = "0.32" }
serde = { version = "1", features = ["derive"], optional = true }
make_table_of_contents = { path = "make_table_of_contents", version = "0.1.0", optional = true }

[dev-dependencies]
eframe = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
persistence = ["dep:serde", "egui/persistence", "uuid/serde"]
doc = ["dep:make_table_of_contents"]

[[example]]
name = "persistence"
required-features = ["persistence", "uuid/serde"]
