[package]
name = "egui_ltreeview"
version = "0.6.1-dev"
edition = "2021"
authors = ["Leonard Schüngel <schuengel.leonard@gmail.com>"]
license = "MIT"
description = "A tree view widget for egui"
repository = "https://github.com/LennysLounge/egui_ltreeview"
categories = ["gui"]
keywords = ["egui", "gui", "widget", "tree"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "src/doc/doc.md"]

[package.metadata.docs.rs]
features = ["doc"]

[dependencies]
egui = { version = "0.33" }
serde = { version = "1", features = ["derive"], optional = true }
make_table_of_contents = { path = "make_table_of_contents", version = "0.1.0", optional = true }

[dev-dependencies]
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
uuid = { version = "1", features = ["v4", "js"] }
log = "0.4.27"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"

[features]
default = []
persistence = ["dep:serde", "egui/persistence", "uuid/serde"]
doc = ["dep:make_table_of_contents"]

[[example]]
name = "persistence"
required-features = ["persistence", "uuid/serde"]
