[package]
name = "egui_ltreeview_wasm_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui_ltreeview = { path = ".." }
egui = "0.32"
eframe = "0.32"
log = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"